Fixed translation tag for heatingmonthlygasconsumption for en, nb and nn

--- a/custom_components/daikin_onecta/translations/nn.json
+++ b/custom_components/daikin_onecta/translations/nn.json
@@ -77,7 +77,7 @@
         "name": "Vekeleg straumforbruk oppvarming"
       },
       "heatingmonthlyelectricalconsumption": {
-        "name": "Månadleg straumforbruk kjøling"
+        "name": "Månadleg straumforbruk oppvarming"
       },
       "heatingyearlyelectricalconsumption": {
         "name": "Årleg straumforbruk oppvarming"
@@ -100,7 +100,7 @@
       "heatingweeklygasconsumption": {
         "name": "Vekeleg gassforbruk oppvarming"
       },
-      "heatingmonthlyconsumption": {
+      "heatingmonthlygasconsumption": {
         "name": "Månadleg gassforbruk oppvarming"
       },
       "heatingyearlygasconsumption": {
