Update Greek translations for water temperature terms
Corrected some mistakes and used more Daikin consistent terminology for leaving water (used the term "Εξερχόμενο νερό" instead of "νερό προσαγωγής"). Changed the term "Offset" to "Μετατόπιση", also keeping the term "offset" to more accurately describe the term to the end user.

Signed-off-by: Panos <panagiotopoulos@gmail.com>

--- a/custom_components/daikin_onecta/translations/el.json
+++ b/custom_components/daikin_onecta/translations/el.json
@@ -119,7 +119,7 @@
         "name": "Εξωτερική θερμοκρασία"
       },
       "leavingwatertemperature": {
-        "name": "Θερμοκρασία νερού προσαγωγής"
+        "name": "Θερμοκρασία εξερχόμενου νερού"
       },
       "errorcode": {
         "name": "Κωδικός σφάλματος"
@@ -167,7 +167,7 @@
         "name": "Συγκέντρωση PM10"
       },
       "leavingwateroffset": {
-        "name": "Offset θερμοκρασίας νερού προσαγωγής"
+        "name": "Μετατόπιση (offset) θερμοκρασίας εξερχόμενου νερού"
       },
       "calculatedleavingwatertemperature": {
         "name": "Υπολογισμένη θερμοκρασία εξερχόμενου νερού"
@@ -194,7 +194,7 @@
         "name": "Κωδικός περιοχής"
       },
       "timezone": {
-        "name": "TΖώνη ώρας"
+        "name": "Ζώνη ώρας"
       }
     },
     "binary_sensor": {
@@ -211,7 +211,7 @@
         "name": "Σε κατάσταση εγκαταστάτη"
       },
       "isinemergencystate": {
-        "name": "Σε κατάσταση εγκαταστάτη"
+        "name": "Σε κατάσταση έκτακτης ανάγκης"
       },
       "ispowerfulmodeactive": {
         "name": "Ενεργή λειτουργία ενισχυμένης ισχύος"
